// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`WorkflowNavBar should duplicate the workflow when user is logged in and clicks the button 1`] = `
<Fragment>
  <nav
    className="navbar"
  >
    <div
      className="navbar-elements"
    >
      <a
        className="logo-navbar"
        href="/workflows/"
      >
        <img
          className="image"
          src="undefinedimages/logo.svg"
        />
      </a>
      <WorkflowTitleAndMetadata
        isReadOnly={false}
        workflow={
          Object {
            "id": 12,
            "name": "Original Version",
            "owner_name": "John Johnson",
            "public": true,
          }
        }
      />
      <div
        className="nav-buttons"
      >
        <WithI18n
          redo={[Function]}
          undo={[Function]}
        />
        <button
          name="duplicate"
          onClick={[Function]}
        >
          Duplicate
        </button>
        <WithI18n>
          Share
        </WithI18n>
        <WithI18n
          api={
            Object {
              "duplicateWorkflow": [MockFunction],
            }
          }
          isReadOnly={false}
          user={
            Object {
              "id": 1,
            }
          }
          workflowId={12}
        />
      </div>
    </div>
  </nav>
</Fragment>
`;

exports[`WorkflowNavBar should redirect to sign-in page when user clicks duplicate button while not logged in 1`] = `
<Fragment>
  <nav
    className="navbar"
  >
    <div
      className="navbar-elements"
    >
      <a
        className="logo-navbar"
        href="/workflows/"
      >
        <img
          className="image"
          src="undefinedimages/logo.svg"
        />
      </a>
      <WorkflowTitleAndMetadata
        isReadOnly={false}
        workflow={
          Object {
            "id": 303,
            "name": "Original Version",
            "owner_name": "Not LogggedIn",
            "public": true,
          }
        }
      />
      <div
        className="nav-buttons"
      >
        <WithI18n
          redo={[Function]}
          undo={[Function]}
        />
        <button
          name="duplicate"
          onClick={[Function]}
        >
          Duplicate
        </button>
        <WithI18n>
          Share
        </WithI18n>
        <a
          className="nav--link"
          href="/account/login"
        >
          Sign in
        </a>
      </div>
    </div>
  </nav>
</Fragment>
`;
